[metadata]
name = himport
version = 0.0.1
author = Combo Gang
author_email = contact@combogang.xom
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    requests

[options.packages.find]
exclude =
    examples*